# p-area

./: README.md  Untitled.ipynb  setup.cfg  setup.py
.github/workflows/: ci.yaml  pypi.yaml
logo/: logo.py
parea/: __about__.py  __init__.py  main.py
tests/: cube.stl  integration.py  unit.py
tests/data/: p6.stl
