[metadata]
name = parea
version = 0.1.0
author = Nathan A. Rooy
email = nathanrooy@gmail.com
description = The easiest way to calculate the projected/frontal area of an STL.
url = https://github.com/nathanrooy/p-area
project_urls =
    Code=https://github.com/nathanrooy/p-area
    Issues=https://github.com/nathanrooy/p-area/issues
long_description = file: README.md
long_description_content_type = text/markdown
license = GPLv3
platforms = any
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Utilities

[options]
packages = find:
install_requires =
    shapely
python_requires = >=3.5
setup_requires =
    setuptools>=42
    wheel

[options.entry_points]
console_scripts =
    parea = parea:main
